--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,7 +1,13 @@
-/*===== GOOGLE FONTS =====*/
+
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap");
-/*===== VARIABLES CSS =====*/
+
 :root {
+  background:url();
+  --webkit-background-size: cover;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  
   --header-height: 3rem;
   --font-semi: 600;
   /*===== Colores =====*/
@@ -49,8 +55,17 @@ body {
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
   color: var(--second-color);
+  
 }
-
+/*Thay part of the code was used for the make the blur image in the code part */
+/* Here the fill-opacity was adjust the blur-ness of the image (that means it was blur only image not to be whole page */
+.box{
+  background-image: url("../img/work4.jpg");
+  background-repeat: no-repeat;  
+  background-position: center;
+  background-size: cover;
+  fill-opacity:blur(5px);
+}
 h1, h2, p {
   margin: 0;
 }
@@ -500,6 +515,7 @@ img {
   }
   .about__container {
     padding-top: 2rem;
+    padding-left:370px;
   }
   .about__img img {
     width: 300px;
@@ -528,3 +544,66 @@ img {
     width: 450px;
   }
 }
+
+
+/* From here the btn bar code was started in the icon indications */
+
+.btn {		
+	padding: 1rem 2rem;
+	position: relative;
+	font-size: 1.4rem;
+	color:darkmagenta;
+	text-transform: uppercase;
+	transition: all 500ms cubic-bezier(0.77, 0, 0.175, 1);	
+	cursor: pointer;
+	user-select: none;
+	outline:none;
+	border:4px solid rgb(16, 16, 20);
+  border-radius: 30px;
+}
+
+.btn:before, .btn:after {
+	content: '';
+	position: absolute;
+	transition: inherit;
+	z-index: -1;
+}
+
+.btn:hover {
+	color:white;
+	transition-delay: .5s;
+}
+
+.btn:hover:before {
+	transition-delay: 0s;
+   
+}
+
+.btn:hover:after {
+	background:rgb(85, 85, 160);
+	transition-delay: .35s;
+  border-radius: 25px;
+}
+
+.left:before, 
+.left:after {
+	top: 0;
+	width: 0;
+	height: 100%;
+}
+
+.left:before {
+	right: 0;
+	border-left: 0;
+	border-right: 0;	
+}
+
+.left:after {
+	left: 0;
+}
+
+.left:hover:before,
+.left:hover:after {
+	width: 100%;
+}
+
