--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -60,13 +60,17 @@ body {
 /*Thay part of the code was used for the make the blur image in the code part */
 /* Here the fill-opacity was adjust the blur-ness of the image (that means it was blur only image not to be whole page */
 .box{
-  background-image: url("../img/work4.jpg");
+  background-image: url("../img/new.jpg");
   background-repeat: no-repeat;  
   background-position: center;
   background-size: cover;
-  fill-opacity:blur(50px);
+  /* fill-opacity:blur(50px); */
    
 }
+.box-1{
+  background-image: url("../img/nav2.jpg");
+}
+
 h1, h2, p {
   margin: 0;
 }
@@ -139,6 +143,10 @@ img {
   justify-content: space-between;
   align-items: center;
   font-weight: var(--font-semi);
+
+  padding-left: 100px;
+  padding-right: 50px;
+  
 }
 
 @media screen and (max-width: 767px) {
@@ -146,7 +154,7 @@ img {
     position: fixed;
     top: var(--header-height);
     right: -100%;
-    width: 80%;
+    width: 100%;
     height: 100%;
     padding: 2rem;
     background-color: var(--second-color);
@@ -174,7 +182,7 @@ img {
   height: 0.18rem;
   left: 0;
   top: 2rem;
-  background-color: var(--first-color);
+   
 }
 
 .nav__logo {
@@ -436,6 +444,7 @@ img {
 @media screen and (min-width: 576px) {
   .home {
     padding: 4rem 0 2rem;
+    
   }
   .home__social {
     padding-top: 0;
@@ -446,6 +455,13 @@ img {
   .home__social-icon {
     margin-bottom: 0;
     margin-right: var(--mb-4);
+  }
+  .new-block{
+    background-image: url("../img/xc-min.jpg");
+    background-repeat: no-repeat;  
+    background-position: center;
+    background-size: cover;
+
   }
   .home__img {
     width: 300px;
@@ -670,3 +686,4 @@ img {
     50% { background-position: 400% 0; }
     100% { background-position: 0 0; }
 }
+
